src/styles/indexSmall.css
/* Found this trick (in HTML tag below) to set BG to always cover and stay fixed on CSS Tricks: https://css-tricks.com/perfect-full-page-background-image/  */


/* HEADER/FOOTER/BODY BASIC ITEMS */

html {
  background: url("../../assets/SMC_BG.png") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body{
  font-family: Roboto, Tahoma, Verdana, sans-serif;
  margin: 0 0 50px 0;
}

/* Oversizing catch-all */
img, embed, object, video {
  max-width: 100%;
}

/* Remove underline from links */

a:link {
  text-decoration: none;
  color: inherit;
}

a:visited {
  text-decoration: none;
  color: inherit;
}

a:hover {
  text-decoration: none;
  color: inherit;
}

a:active {
  text-decoration: none;
  color: inherit;
}

/* HEADER & MENU */

#header {
  position: fixed;
  display: flex;
  justify-content: center;
  align-content: center;
  width: 100%;
  background: radial-gradient(#188ff4,#0062c1);
  color: #ffffff;
  height: 50px;
  margin-bottom: 80px;
  z-index: 999;
}

.banner {
  height: 45px;
  margin: 2px;
}

.banner img {
  max-width: 100%;
  max-height: 90%;
  margin-top: 2px;
}

.props {
  display: none;
  margin-left: 10px;
  padding-right:5%;
  max-width: 30%;
}

.fullMenu {
  position: fixed;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  padding-top: 55px;
  padding-bottom: 2px;
  background-color: #0062c1d5;
  background-image: url("../../assets/CSSTexture1.png");
  z-index: 888;
}

.fullMenuLinks {
  color: #fff;
  font-size: 13px;
  padding: 8px;
}

/* Temp remove Hambugrger MENU
.hamburgerMenu {
  position: absolute;
  left: 85%;
  height: inherit;
  list-style: none;
}

.hamburgerMenu img {
  height: 40px;
  filter: brightness(0) invert(1);
}

.menuButton {
  height: inherit;
  padding-right: 10px;
  padding-left: 10px;
  background-color: inherit;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

.menuContent {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 999;
  right: 0;
}

.menuContent a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.show {display: block;}

.navbar {
  overflow: hidden;
  padding: 10px;
}

.navbar a{
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  text-decoration: none;
}
*/


/* WELCOME */

#ourMission {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-width: 200px;
}

.missionMessage {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  margin-top: 130px;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
  background-color: #f4564bc9;
  background-image: url("../../assets/CSSTexture1.png");
  border-top: 5px solid #a9a9a9;
  border-bottom: 5px solid #a9a9a9;
  font-size: 13px;
}

.welcomeHeader {
  color: #fff;
  font-size: 20px;
  margin: 8px;
}


/* DEV BOXES */

#ourTeam {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

.sectionBanner {
  width: 100%;
  height: auto;
  border-bottom: 2px solid #ddd;
  background-color: #ffffffc9;
  background-image: url("../../assets/CSSTexture1.png");
  text-align: center;
  font-size: 15px;
  margin-top: 120px;
  margin-bottom: 15px;
}

.devRows {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  align-content: space-around;
  flex-wrap: wrap;
  width: 100%;
  height: auto;
  margin: auto;
}

.devBox {
  display: flex;
  align-items: center;
  background-color: #0062c1d5;
  background-image: url("../../assets/CSSTexture1.png");
  min-width: 300px;
  max-width: 400px;
  height: 120px;
  margin: 12px;
  margin-bottom: 10px;
  border-radius: 15px;
}

.devNameBox {
  background-color: #000;
  height: inherit;
  width: 40px;
  margin: 0 12px 0 0;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}

.devName {
  position: relative;
  top: 50%;
  transform: rotate(-90deg);
  color: #fff;
  font-size: 15px;
  letter-spacing: 2px;
}

.devPic {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: 1px solid #000;
  box-shadow: 1px 1px 6px 1px #000;
}

.devInfo {
  list-style-type: none;
}

li {
  margin-bottom: 5px;
}

.devInfo {
  align-self: center;
  min-width: 120px;
  max-width: 150px;
  font-size: 13px;
  margin-left: -25px;
  margin-right: 5px;
}

.devInfoListItems {
  font-weight: bold;
}

/* GitHub FEED */

#ourProject {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}


#feed {
  margin: auto;
}

/*!
 * GitHub Activity Stream - v0.1.4 - 10/7/2015
 * https://github.com/caseyscarborough/github-activity
 *
 * Copyright (c) 2015 Casey Scarborough
 * MIT License
 * http://opensource.org/licenses/MIT
 */

.gha-feed {
  width: auto;
  height: auto;
  background: #fff;
  font-weight: normal;
  font-size: 14px;
  font-family: Helvetica, arial, freesans, clean, sans-serif;
  line-height: 1.3;
  overflow-y: auto;
  border: 0px solid #ddd;
}

.gha-feed,
.gha-feed h2,
.gha-feed h3,
.gha-feed p,
.gha-feed ul,
.gha-feed li {
  margin: 0;
  padding: 0;
}

.gha-feed ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.gha-feed li {
  list-style-type: none;
  line-height: 1.4;
}

.gha-feed small {
  color: #666;
  font-weight: normal;
  font-size: 13px;
}

.gha-feed small a {
  font-weight: normal;
}

.gha-feed small a .more-commits {
  font-size: 11px;
}

span.gha-time {
  color: #bbb;
  font-weight: normal;
  font-size: 12px;
}

.gha-feed a {
  color: #4183c4;
  text-decoration: none;
  font-weight: bold;
}

.gha-feed a:hover {
  text-decoration: underline;
}

.gha-feed pre {
  padding: 0;
  border: 0;
  border-radius: 0;
  box-shadow: 1px 1px 4px #bbb;
  color: white;
}

.gha-header {
  width: auto;
  padding: 10px;
  margin-bottom: -80px;
  height: 67px;
  border-bottom: 0px solid #ddd;
  background: #ffffff; /* Old browsers */
  background: -moz-linear-gradient(top, #ffffff 0%, #f4f4f4 100%); /* FF3.6+ */
  background: -webkit-gradient(
    linear,
    left top,
    left bottom,
    color-stop(0%, #ffffff),
    color-stop(100%, #f4f4f4)
  ); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(
    top,
    #ffffff 0%,
    #f4f4f4 100%
  ); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(
    top,
    #ffffff 0%,
    #f4f4f4 100%
  ); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #ffffff 0%, #f4f4f4 100%); /* IE10+ */
  background: linear-gradient(to bottom, #ffffff 0%, #f4f4f4 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(
      startColorstr="#ffffff",
      endColorstr="#f4f4f4",
      GradientType=0
    ); /* IE6-9 */
}

.gha-footer {
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding: 0px;
  border-top: 0 solid #ddd;
  height: 1px;
  width: calc(100%);
  background: #ffffff; /* Old browsers */
  background: -moz-linear-gradient(top, #ffffff 0%, #f4f4f4 100%); /* FF3.6+ */
  background: -webkit-gradient(
    linear,
    left top,
    left bottom,
    color-stop(0%, #ffffff),
    color-stop(100%, #f4f4f4)
  ); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(
    top,
    #ffffff 0%,
    #f4f4f4 100%
  ); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(
    top,
    #ffffff 0%,
    #f4f4f4 100%
  ); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #ffffff 0%, #f4f4f4 100%); /* IE10+ */
  background: linear-gradient(to bottom, #ffffff 0%, #f4f4f4 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(
      startColorstr="#ffffff",
      endColorstr="#f4f4f4",
      GradientType=0
    ); /* IE6-9 */
  opacity: 0;
  font-size: 0px;
  padding-left: 0px;
}

.gha-footer a {
  float: right;
  color: #495961;
  padding-right: 20px;
  font-size: 0px;
  font-weight: bold;
}

.gha-footer a:hover {
  text-decoration: none;
}
.gha-header a:hover {
  text-decoration: none;
}

.gha-github-icon {
  display: inline;
  float: left;
  padding: 5px 0 0;
  width: 35px;
  height: 35px;
  color: #495961;
}

.gha-github-icon .octicon {
  font: normal normal 40px octicons;
}

.gha-gravatar {
  display: inline;
  float: right;
  margin-right: 10px;
  padding-right: 20px;
  max-width: 60px;
  height: 67px;
}

.gha-gravatar img {
  padding: 2px;
  width: 100%;
  border: 1px solid #ddd;
  box-shadow: 1px 1px 3px #ccc;
}

.gha-activity {
  clear: both;
  padding: 15px;
  width:auto;
  border-bottom: 1px solid #ddd;
}

.gha-activity.gha-small {
  font-weight: normal;
  font-size: 13px;
}

.gha-activity.gha-small a {
  font-weight: normal;
}

.gha-activity.gha-small span {
  font-size: 13px;
}

.gha-activity:last-child {
  padding-bottom: 100px;
}

.gha-repo {
  clear: both;
  padding: 10px 0;
  width: 100%;
  border-bottom: 1px solid #ddd;
}

.gha-activity-icon .octicon {
  display: inline;
  float: left;
  clear: both;
  margin: auto;
  width: 50px;
  color: #bbb;
  text-align: center;
  font: normal normal 20px octicons;
}

.gha-activity-icon .gha-small {
  font-size: 20px;
}

.gha-message {
  display: inline-block;
  float: left;
  width: calc(100% - 50px);
}

.gha-message-commits {
  font-size: 20px;
}

.gha-message-merge {
  padding: 3px 7px;
  border-radius: 3px;
  background: #e8f1f6;
  color: rgba(0, 0, 0, 0.5);
  font-size: 12px;
  line-height: 2;
}

.gha-sha {
  font-size: 12px;
  font-family: Consolas, "Liberation Mono", Courier, monospace;
}

.gha-gravatar-small {
  float: left;
  margin-right: 6px;
  width: 30px;
}

.gha-gravatar-commit {
  margin-bottom: -3px;
  border-radius: 2px;
}

.gha-gravatar-user {
  float: left;
}

.gha-user-info {
  display: inline-block;
  float: left;
  margin: 0 auto;
  padding: 15px 10px 5px;
  color: #495961;
  font-size: 20px;
}

.gha-user-info a {
  color: #495961;
}
.gha-user-info p a {
  font-weight: 100;
}

.gha-without-name {
  padding-top: 20px;
  padding-left: 15px;
}

.gha-info {
  margin: 15px;
  padding: 10px;
  border: 1px solid #e4e4c6;
  border-radius: 4px;
  background: #ffffde;
  color: #6d6d4b;
  font-weight: normal;
  font-size: 13px;
}

.gha-time {
  color: #bbb;
  font-weight: normal;
  font-size: 12px;
}

.gha-clear {
  clear: both;
}
.gha-muted {
  color: #666;
}
.gha-push {
  height: 87px;
}
.gha-push-small {
  height: 26px;
}


/* Original Footer idea from @cbracco https://codepen.io/cbracco/pen/zekgx?q=footer&limit=all&type=type-pens */

.footer {
  min-height: 10px;
  max-height: 10px;
  width: 100%;
  padding-bottom: 8px;
  bottom: 0;
  position: fixed;
  text-align: center;
  font-size: 12px;
  color: #fff;
  background: radial-gradient(#188ff4, #0062c1);
  z-index: 1;
}

